--- a/serviceprovider2/src/main/resources/application.properties
+++ b/serviceprovider2/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 database.hibernate.url=jdbc:mysql://localhost:3306/users
 database.hibernate.driver=com.mysql.cj.jdbc.Driver
 database.hibernate.username=root
-database.hibernate.password=haha
+database.hibernate.password=WO
 database.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 database.hibernate.showsql=true
 
 database.jdbc.driver=com.mysql.cj.jdbc.Driver
 database.jdbc.url=jdbc:mysql://localhost:3306/quiz_system
 database.jdbc.username=root
-database.jdbc.password=haha
+database.jdbc.password=WOS
+
